samples/_failures_safe/1761648494_283abb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5820c7df.c: In function ‘main’:
./samples/SAFE/__tmp_5820c7df.c:162:12: error: missing terminating " character
  162 |     printf("Type
      |            ^~~~~
./samples/SAFE/__tmp_5820c7df.c:162:5: error: expected expression at end of input
  162 |     printf("Type
      |     ^~~~~~
./samples/SAFE/__tmp_5820c7df.c:162:5: error: expected declaration or statement at end of input
